# AAS-Readable

./: .gitignore  README.md  pyproject.toml
docs/: cli-plan.md  python-api.md  research.md
examples/meng-app-aas/: document.md  functionaldata.md  index.md  lifecycledata.md  llm-context.md  operationaldata.md  staticdata.md
src/aas_readable/: __init__.py  cli.py  document.py  exporter.py  markdown.py  payloads.py  util.py  yaml_render.py
src/aasx_md_exporter/: cli.py  exporter.py
tests/: test_markdown.py  test_yaml.py
